--- a/sass-bem/_components.scss
+++ b/sass-bem/_components.scss
@@ -1,4 +1,4 @@
-nav {
+.navigation {
   height: 10vh;
   background-color: $color-primary;
   padding: 0 40px;
@@ -23,21 +23,21 @@ nav {
   color: $color-white;
 }
 
-div {
+.intro {
   text-align: center;
 
-  h1 {
+  &__heading {
     color: $color-primary;
     font-size: 50px;
   }
 
-  h2 {
+  &__sub-heading {
     font-family: $font-display;
     font-size: 25px;
     margin: 20px 0;
   }
 
-  * {
+  &__button {
     margin: 0 auto;
   }
 }
