--- a/sass-bem/_base.scss
+++ b/sass-bem/_base.scss
@@ -1,9 +1,12 @@
 @import url("https://fonts.googleapis.com/css2?family=Dancing+Script&family=Roboto&display=swap");
 
-$font-body: "Roboto", sans-serif;
-$font-display: "Dancing-Script", cursive;
+$font-body: "Roboto",
+sans-serif;
+$font-display: "Dancing-Script",
+cursive;
 
-$color-primary: #28527a;
+$color-primary: rgb(40, 82, 122);
+$color-primary-light: #55a5f0;
 $color-secondary: #f0a500;
 $color-black: #333333;
 $color-white: #fafafa;
